add homework for less 4

--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,7 +1,7 @@
 <div class="card mt-3" [ngClass]="{'bg-success text-white': task.completed}">
-    <div class="card-body">
+    <div class="card-body" [ngClass]="{'bg-primary': task.id === editButtonClicked && isEdit}">
         <p class="card-text">{{task.title}}</p>
-        <button class="btn btn-primary">Edit</button>
+        <button class="btn btn-primary" (click)="editTask()" [ngClass]="{'btn-success': task.id === editButtonClicked && isEdit}">Edit</button>
         <button class="btn btn-danger" (click)="deleteOneTask()">Delete</button>
         <button class="btn" [ngClass]="{'btn-primary': task.completed, 'btn-danger': !task.completed}" (click)="updateOneTask()">{{task.completed? 'Undone': 'Done'}}</button>
     </div>
