--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,12 +1,14 @@
 <div class="card">
     <div class="card-body">
-        <form #form="ngForm" novalidate (ngSubmit)="addTask()">
+        <form #form="ngForm" novalidate>
             <div class="form-group">
                 <label for="title">title</label>
                 <input type="text" class="form-control" id="text" name="title" [(ngModel)]="title" #taskTitle="ngModel" required>
             </div>
             <div class="alert alert-danger" *ngIf="taskTitle.touched && taskTitle.invalid && form.submitted">title required</div>
-            <button class="btn btn-primary" [disabled]="taskTitle.invalid">Add task</button>
+            <button class="btn btn-primary" [disabled]="taskTitle.invalid" *ngIf="!isEdit" (click)="addTask()">Add task</button>
+            <button class="btn btn-primary" [disabled]="taskTitle.invalid" *ngIf="isEdit" (click)="editTask()">Edit task</button>
+            <button class="btn btn-danger" *ngIf="isEdit" (click)="closeTask()">Cancel</button>
         </form>
     </div>
 </div>
