--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,6 @@
+<app-navbar></app-navbar>
 <div class="container mt-5">
+    <flash-messages></flash-messages>
     <app-form></app-form>
     <app-list></app-list>
 </div>
