--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,14 +1,27 @@
 <div class="card">
-    <div class="card-body">
-        <form #form="ngForm" novalidate>
-            <div class="form-group">
-                <label for="title">title</label>
-                <input type="text" class="form-control" id="text" name="title" [(ngModel)]="title" #taskTitle="ngModel" required>
-            </div>
-            <div class="alert alert-danger" *ngIf="taskTitle.touched && taskTitle.invalid && form.submitted">title required</div>
-            <button class="btn btn-primary" [disabled]="taskTitle.invalid" *ngIf="!isEdit" (click)="addTask()">Add task</button>
-            <button class="btn btn-primary" [disabled]="taskTitle.invalid" *ngIf="isEdit" (click)="editTask()">Edit task</button>
-            <button class="btn btn-danger" *ngIf="isEdit" (click)="closeTask()">Cancel</button>
-        </form>
-    </div>
+  <div class="card-body">
+    <form #form="ngForm" novalidate>
+      <div class="form-group">
+        <label for="text">Text</label>
+        <input type="text" class="form-control" id="text"
+                [(ngModel)]="title"
+                name="title"
+                #taskTitle="ngModel"
+                required>
+      </div>
+      <div class="alert alert-danger" *ngIf="taskTitle.touched && taskTitle.invalid && form.submitted">title required</div>
+      <button class="btn btn-primary" [disabled]="form.invalid"
+                (click)="addTask()"
+                *ngIf="!isEdit">Add task
+      </button>
+      <button class="btn btn-primary" [disabled]="form.invalid"
+                (click)="editTask()"
+                *ngIf="isEdit">Edit Task
+      </button>
+      <button class="btn btn-danger"
+                (click)="cancelEdit()"
+                *ngIf="isEdit">Cancel
+      </button>
+    </form>
+  </div>
 </div>
