--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Todo</a>
-    <span class="navbar-text" *ngIf="lastMessage">
-        Last todo text: {{lastMessage}}
-    </span>
-    <span class="navbar-text">
-        Todo length: {{todoLength}}
-    </span>
+  <a class="navbar-brand" href="#">Todo</a>
+  <span class="navbar-text" *ngIf="todoText">
+      Last todo text: {{todoText}}
+  </span>
+  <span class="navbar-text">
+      Todo length: {{todoLength}}
+  </span>
 </nav>
